# matrix_library_on_C-

./: LICENSE  README.md
src/:  s21_matrix_oop.h  CMakeLists.txt  Makefile
src/SOURCE/: CalcComplements.cpp  Determinant.cpp  EditRowsCols.cpp  EqMatrix.cpp  InverseMatrix.cpp  MulMatrix.cpp  MulNumber.cpp  SubMatrix.cpp  SumMatrix.cpp  Transpose.cpp  s21Matrix.cpp  ~s21Matrix.cpp
src/SOURCE/HELPER/: for_determinant.cpp  get_determinant_two_dimensional.cpp  get_minor_matrix.cpp
src/SOURCE/OPERATORS/: operator*=.cpp  operator+.cpp  operator+=.cpp  operator-.cpp  operator-=.cpp  operator=.cpp  operator==.cpp  operator_brackets.cpp  operator_mult.cpp
src/UNIT-TEST/: test.cpp
